WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229541
[JSC] DataIC should not embed StructureStubInfo pointer
https://bugs.webkit.org/show_bug.cgi?id=229541
Summary
[JSC] DataIC should not embed StructureStubInfo pointer
Yusuke Suzuki
Reported
2021-08-26 01:08:59 PDT
[JSC] DataIC should not embed StructureStubInfo pointer
Attachments
Patch
(3.75 KB, patch)
2021-08-26 01:09 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(5.05 KB, patch)
2021-08-26 01:20 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-08-26 01:09:40 PDT
Created
attachment 436480
[details]
Patch
Yusuke Suzuki
Comment 2
2021-08-26 01:20:11 PDT
Created
attachment 436481
[details]
Patch
Mark Lam
Comment 3
2021-08-26 01:33:51 PDT
Comment on
attachment 436481
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2021-08-26 03:13:40 PDT
Committed
r281618
(
240974@main
): <
https://commits.webkit.org/240974@main
>
Radar WebKit Bug Importer
Comment 5
2021-08-26 03:15:03 PDT
<
rdar://problem/82381997
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug