[JSC] DataIC should not embed StructureStubInfo pointer https://bugs.webkit.org/show_bug.cgi?id=229541

Reviewed by Mark Lam.

We should not embed pointer to StructureStubInfo::countdown if DataIC is used.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::store8):
* bytecode/PolymorphicAccess.cpp:
(JSC::PolymorphicAccess::regenerate):
* bytecode/StructureStubInfo.h:
(JSC::StructureStubInfo::offsetOfCountdown):

Canonical link: https://commits.webkit.org/240974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281618 268f45cc-cd09-0410-ab3c-d52691b4dbfc